# iso532-1-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-TW.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
docs/: ARCH-EVAL-REPO-SPLIT-2026-07-18.md  ARCHITECTURE-PERFORMANCE-RISK-REPORT-2026-07-10.md  CI-HASH-GATE-DEBUG-2026-07-10.md  DESIGN-DEVELOPMENT-2026-07-04.md  GOLDEN-REGEN-SOP.md  ISO-ANNEXB-NUMERICAL-ERROR-2026-07-04.md  ISO532-SYSTEM-OVERVIEW-QA.html  PLAN-TIMING-ANALYSIS-2026-07-18.md  (+13 more)
iso532/: Cargo.toml  README.md
iso532-ffi/: Cargo.toml  cbindgen.toml
iso532-ffi/include/: iso532.h
iso532-ffi/src/: lib.rs
iso532-ffi/tests/: ffi.rs  smoke.c
iso532-py/: Cargo.toml  pyproject.toml
iso532-py/src/: lib.rs
iso532-py/tests/: conftest.py  test_parity_mosqito.py  test_smoke.py  test_stream.py
iso532/benches/: loudness.rs
iso532/examples/: cli.rs
iso532/src/: error.rs  lib.rs  sone2phon.rs  tables.rs  tables_noct.rs
iso532/src/core/: calc_slopes.rs  main_loudness.rs  mod.rs
iso532/src/dsp/: filtfilt.rs  mod.rs  sos.rs
iso532/src/simd/: mod.rs
iso532/src/zwst/: mod.rs
iso532/src/zwtv/: mod.rs  nonlinear_decay.rs  stream.rs  temporal_weighting.rs  third_octave_levels.rs
iso532/tests/: annexb.rs  api_errors.rs  determinism.rs  golden_core.rs  golden_dsp.rs  golden_zwst.rs  golden_zwtv.rs  hash_gate.rs  py_contract_dump.rs  simd_dispatch.rs  simd_parity.rs  stream.rs  stream_alloc.rs  stream_no_rayon.rs  stream_scalar.rs
iso532/tests/common/: mod.rs
(+46 files in other folders)
